{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 42,
  "lineage": "20e8eaf6-82a3-4ef7-1528-8459d1fa46e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "geonos_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:internet-gateway/igw-0399d23722633b3b9",
            "id": "igw-0399d23722633b3b9",
            "owner_id": "754370150126",
            "tags": {
              "Name": "geonos_igw"
            },
            "tags_all": {
              "Name": "geonos_igw"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "geonos_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:vpc/vpc-0065e56715453dad8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0633e9405abb4aee1",
            "default_route_table_id": "rtb-0d6baaf341ac925c8",
            "default_security_group_id": "sg-0f81fe28387e26517",
            "dhcp_options_id": "dopt-0458957e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0065e56715453dad8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d6baaf341ac925c8",
            "owner_id": "754370150126",
            "tags": {
              "Name": "geonos_vpc"
            },
            "tags_all": {
              "Name": "geonos_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754370150126:loadbalancer/app/satquery-api-alb/040d13e03d44dc9d",
            "arn_suffix": "app/satquery-api-alb/040d13e03d44dc9d",
            "dns_name": "satquery-api-alb-975362727.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:754370150126:loadbalancer/app/satquery-api-alb/040d13e03d44dc9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "satquery-api-alb",
            "security_groups": [
              "sg-01b90e3e429b7bbfb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f14e8ae41d24b28"
              },
              {
                "subnet_id": "subnet-0e64e1ed4396676a4"
              }
            ],
            "subnets": [
              "subnet-09f14e8ae41d24b28",
              "subnet-0e64e1ed4396676a4"
            ],
            "tags": {
              "Name": "satquery-api-alb"
            },
            "tags_all": {
              "Name": "satquery-api-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0065e56715453dad8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754370150126:listener/app/satquery-api-alb/040d13e03d44dc9d/d97603c5bb37e061",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:754370150126:targetgroup/satquery-api-tg/aee29891e38ce7e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:754370150126:listener/app/satquery-api-alb/040d13e03d44dc9d/d97603c5bb37e061",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:754370150126:loadbalancer/app/satquery-api-alb/040d13e03d44dc9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754370150126:targetgroup/satquery-api-tg/aee29891e38ce7e6",
            "arn_suffix": "targetgroup/satquery-api-tg/aee29891e38ce7e6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/docs",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:754370150126:targetgroup/satquery-api-tg/aee29891e38ce7e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "satquery-api-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "satquery-api-tg"
            },
            "tags_all": {
              "Name": "satquery-api-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-alb-service-task.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:security-group/sg-0583cb27fb18d6ca4",
            "description": "ECS service Security Group",
            "egress": [],
            "id": "sg-0583cb27fb18d6ca4",
            "ingress": [],
            "name": "geonos-dev-satquery-api-service",
            "name_prefix": "",
            "owner_id": "754370150126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "service",
              "Name": "geonos-dev-satquery-api-service",
              "Namespace": "geonos",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "service",
              "Name": "geonos-dev-satquery-api-service",
              "Namespace": "geonos",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-alb-service-task.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress--1-0-0-9c87e5e1ed040a443ce1ac8e6d6cf159",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-725075845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0583cb27fb18d6ca4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.ecs-alb-service-task.module.security_group.aws_security_group.default",
            "module.ecs-alb-service-task.module.security_group.data.aws_security_group.external"
          ]
        },
        {
          "index_key": "ingress-icmp-8-0-8bba30c3f574278e5bb940739d75c3c3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Enables ping command from anywhere, see https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/security-group-rules-reference.html#sg-rules-ping",
            "from_port": 8,
            "id": "sgrule-3868288145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0583cb27fb18d6ca4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.ecs-alb-service-task.module.security_group.aws_security_group.default",
            "module.ecs-alb-service-task.module.security_group.data.aws_security_group.external"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:security-group/sg-01b90e3e429b7bbfb",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-01b90e3e429b7bbfb",
            "ingress": [],
            "name": "satquery-api-sg-20210924211725646900000002",
            "name_prefix": "satquery-api-sg-",
            "owner_id": "754370150126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "satquery-api-sg"
            },
            "tags_all": {
              "Name": "satquery-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1354327180",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01b90e3e429b7bbfb",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-658425936",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01b90e3e429b7bbfb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-168213582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01b90e3e429b7bbfb",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_eip",
      "name": "nat_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:vpc/vpc-0065e56715453dad8",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-003f4387c2e6dc763",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0458957e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0065e56715453dad8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d6baaf341ac925c8",
            "owner_id": "754370150126",
            "state": "available",
            "tags": {
              "Name": "geonos_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b01e6c5148b9fc30",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-120-68.compute-1.amazonaws.com",
            "public_ip": "54.237.120.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c1f0e37f4295ed4a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-51-167.compute-1.amazonaws.com",
            "public_ip": "3.232.51.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01e6c5148b9fc30",
            "connectivity_type": "public",
            "id": "nat-0cd2bd4ab08f5e4ec",
            "network_interface_id": "eni-01531a1789c623451",
            "private_ip": "10.0.98.69",
            "public_ip": "54.237.120.68",
            "subnet_id": "subnet-0e64e1ed4396676a4",
            "tags": {
              "Attributes": "nat",
              "Name": "geonos-dev-satquery-api-nat-use1a",
              "Namespace": "geonos",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "geonos-dev-satquery-api-nat-use1a",
              "Namespace": "geonos",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1f0e37f4295ed4a",
            "connectivity_type": "public",
            "id": "nat-038eab311c5a92b46",
            "network_interface_id": "eni-0143cfe637d50eb72",
            "private_ip": "10.0.126.174",
            "public_ip": "3.232.51.167",
            "subnet_id": "subnet-09f14e8ae41d24b28",
            "tags": {
              "Attributes": "nat",
              "Name": "geonos-dev-satquery-api-nat-use1b",
              "Namespace": "geonos",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "geonos-dev-satquery-api-nat-use1b",
              "Namespace": "geonos",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:network-acl/acl-047ac897e82e22012",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-047ac897e82e22012",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "754370150126",
            "subnet_ids": [
              "subnet-00a01147e1f3251a0",
              "subnet-043f32295a7a1ee2b"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:network-acl/acl-082391866514ca09a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-082391866514ca09a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "754370150126",
            "subnet_ids": [
              "subnet-09f14e8ae41d24b28",
              "subnet-0e64e1ed4396676a4"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038dc2eab0415a5cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd2bd4ab08f5e4ec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038dc2eab0415a5cd",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a837a57e15c9da01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038eab311c5a92b46",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a837a57e15c9da0",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0399d23722633b3b9",
            "id": "r-rtb-01b389c16f298e7111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b389c16f298e711",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.geonos_igw",
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:route-table/rtb-038dc2eab0415a5cd",
            "id": "rtb-038dc2eab0415a5cd",
            "owner_id": "754370150126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:route-table/rtb-04a837a57e15c9da0",
            "id": "rtb-04a837a57e15c9da0",
            "owner_id": "754370150126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:route-table/rtb-01b389c16f298e711",
            "id": "rtb-01b389c16f298e711",
            "owner_id": "754370150126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca18b156a210e415",
            "route_table_id": "rtb-038dc2eab0415a5cd",
            "subnet_id": "subnet-00a01147e1f3251a0"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d9bf6f46c1d638b",
            "route_table_id": "rtb-04a837a57e15c9da0",
            "subnet_id": "subnet-043f32295a7a1ee2b"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00edf90f996e867d3",
            "route_table_id": "rtb-01b389c16f298e711",
            "subnet_id": "subnet-0e64e1ed4396676a4"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089ad9c52ac9c8919",
            "route_table_id": "rtb-01b389c16f298e711",
            "subnet_id": "subnet-09f14e8ae41d24b28"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:subnet/subnet-00a01147e1f3251a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-00a01147e1f3251a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754370150126",
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:subnet/subnet-043f32295a7a1ee2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-043f32295a7a1ee2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754370150126",
            "tags": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "geonos-dev-satquery-api-private-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:subnet/subnet-0e64e1ed4396676a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-0e64e1ed4396676a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754370150126",
            "tags": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public-use1a",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754370150126:subnet/subnet-09f14e8ae41d24b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.112.0/20",
            "id": "subnet-09f14e8ae41d24b28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754370150126",
            "tags": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "geonos-dev-satquery-api-public-use1b",
              "Namespace": "geonos",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0065e56715453dad8"
          },
          "dependencies": [
            "aws_vpc.geonos_vpc",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}